--- a/index.html
+++ b/index.html
@@ -39,6 +39,26 @@
         .custom-scroll::-webkit-scrollbar-thumb { background: #e5e7eb; border-radius: 10px; }
         .action-menu { display: none; position: absolute; background: white; border-radius: 1rem; box-shadow: 0 10px 15px -3px rgba(0,0,0,0.1); border: 1px solid #f3f4f6; z-index: 50; width: 160px; }
         .action-item:hover { background: #eff6ff; color: #2563eb; }
+        .modal-container { position: relative; }
+        .modal-close-btn {
+            position: absolute;
+            top: 1.25rem;
+            right: 1.25rem;
+            width: 2rem;
+            height: 2rem;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background: #f3f4f6;
+            color: #6b7280;
+            border-radius: 9999px;
+            transition: all 0.2s ease;
+            z-index: 10;
+        }
+        .modal-close-btn:hover {
+            background: #e5e7eb;
+            color: #374151;
+        }
     </style>
 </head>
 <body class="text-gray-800 h-screen flex flex-col overflow-hidden">
@@ -158,7 +178,8 @@
     <!-- Office Location Modal -->
     <div id="locationModal" class="modal opacity-0 pointer-events-none fixed w-full h-full top-0 left-0 flex items-center justify-center z-50">
         <div class="modal-overlay absolute w-full h-full bg-gray-900/40 backdrop-blur-sm"></div>
-        <div class="modal-container bg-white w-full max-w-md mx-auto rounded-[2.5rem] shadow-2xl z-50">
+        <div class="modal-container bg-white w-full max-w-md mx-auto rounded-[2.5rem] shadow-2xl z-50 relative">
+            <button onclick="toggleModal('locationModal')" class="modal-close-btn"><i class="fa-solid fa-xmark"></i></button>
             <div class="p-10">
                 <div class="text-center mb-8">
                     <div class="w-16 h-16 bg-emerald-100 text-emerald-600 rounded-2xl flex items-center justify-center mx-auto text-2xl mb-4">
@@ -192,7 +213,8 @@
     <!-- Stats Modal -->
     <div id="statsModal" class="modal opacity-0 pointer-events-none fixed w-full h-full top-0 left-0 flex items-center justify-center z-50">
         <div class="modal-overlay absolute w-full h-full bg-gray-900/60 backdrop-blur-md"></div>
-        <div class="modal-container bg-white w-full max-w-4xl mx-auto rounded-[2rem] shadow-2xl z-50 overflow-hidden">
+        <div class="modal-container bg-white w-full max-w-4xl mx-auto rounded-[2rem] shadow-2xl z-50 relative">
+            <button onclick="toggleModal('statsModal')" class="modal-close-btn"><i class="fa-solid fa-xmark"></i></button>
             <div id="statsContent" class="p-10">
                 <div class="flex justify-between items-center mb-10">
                     <div class="flex gap-6 items-center">
@@ -206,7 +228,6 @@
                         <button onclick="downloadPersonalPDF()" class="pill-btn bg-blue-50 text-blue-600 px-6 py-3 text-xs font-black">
                             <i class="fa-solid fa-download mr-2"></i> EXPORT PDF
                         </button>
-                        <button onclick="toggleModal('statsModal')" class="pill-btn bg-gray-100 text-gray-500 px-6 py-3 text-xs font-black">CLOSE</button>
                     </div>
                 </div>
                 <div class="grid grid-cols-4 gap-4 mb-10">
@@ -237,7 +258,8 @@
     <!-- Add Employee Modal -->
     <div id="addEmployeeModal" class="modal opacity-0 pointer-events-none fixed w-full h-full top-0 left-0 flex items-center justify-center z-50">
         <div class="modal-overlay absolute w-full h-full bg-gray-900/40 backdrop-blur-sm"></div>
-        <div class="modal-container bg-white w-full max-w-md mx-auto rounded-[2.5rem] shadow-2xl z-50">
+        <div class="modal-container bg-white w-full max-w-md mx-auto rounded-[2.5rem] shadow-2xl z-50 relative">
+            <button onclick="toggleModal('addEmployeeModal')" class="modal-close-btn"><i class="fa-solid fa-xmark"></i></button>
             <div class="p-10">
                 <div class="text-center mb-8">
                     <div class="w-16 h-16 bg-blue-100 text-blue-600 rounded-2xl flex items-center justify-center mx-auto text-2xl mb-4">
@@ -256,6 +278,13 @@
                         <input type="text" id="newEmpRole" required placeholder="e.g. Senior Analyst" class="w-full rounded-2xl border-gray-100 bg-gray-50 px-6 py-4 text-sm focus:ring-4 focus:ring-blue-500/10 outline-none border transition-all">
                     </div>
                     <div>
+                        <label class="block text-[10px] font-black text-gray-400 uppercase ml-2 mb-2">User Type</label>
+                        <select id="newEmpType" class="w-full rounded-2xl border-gray-100 bg-gray-50 px-6 py-4 text-sm focus:ring-4 focus:ring-blue-500/10 outline-none border transition-all">
+                            <option value="employee">Employee</option>
+                            <option value="admin">Admin</option>
+                        </select>
+                    </div>
+                    <div>
                         <label class="block text-[10px] font-black text-gray-400 uppercase ml-2 mb-2">Work Email (required for clock-in)</label>
                         <input type="email" id="newEmpEmail" required placeholder="employee@company.com" class="w-full rounded-2xl border-gray-100 bg-gray-50 px-6 py-4 text-sm focus:ring-4 focus:ring-blue-500/10 outline-none border transition-all">
                     </div>
@@ -271,7 +300,8 @@
     <!-- Confirm Delete Modal -->
     <div id="confirmDeleteModal" class="modal opacity-0 pointer-events-none fixed w-full h-full top-0 left-0 flex items-center justify-center z-[70]">
         <div class="modal-overlay absolute w-full h-full bg-gray-900/60 backdrop-blur-md"></div>
-        <div class="modal-container bg-white w-full max-w-xs mx-auto rounded-[2.5rem] shadow-2xl z-50 overflow-hidden">
+        <div class="modal-container bg-white w-full max-w-xs mx-auto rounded-[2.5rem] shadow-2xl z-50 relative">
+            <button onclick="toggleModal('confirmDeleteModal')" class="modal-close-btn"><i class="fa-solid fa-xmark"></i></button>
             <div class="p-8 text-center">
                 <div class="w-16 h-16 bg-red-100 text-red-600 rounded-full flex items-center justify-center mx-auto mb-4 text-xl">
                     <i class="fa-solid fa-triangle-exclamation"></i>
@@ -280,7 +310,6 @@
                 <p class="text-gray-500 text-xs mt-2 leading-relaxed">This will remove <span id="deleteTargetName" class="font-bold text-gray-800"></span> from the registry. This action is irreversible.</p>
                 <div class="flex flex-col gap-2 mt-8">
                     <button id="finalDeleteBtn" class="pill-btn bg-red-600 text-white font-black py-3 text-sm">DELETE PERMANENTLY</button>
-                    <button onclick="toggleModal('confirmDeleteModal')" class="pill-btn bg-gray-100 text-gray-500 font-black py-3 text-sm">CANCEL</button>
                 </div>
             </div>
         </div>
@@ -289,7 +318,8 @@
     <!-- Success / QR Modal -->
     <div id="successModal" class="modal opacity-0 pointer-events-none fixed w-full h-full top-0 left-0 flex items-center justify-center z-[60]">
         <div class="modal-overlay absolute w-full h-full bg-gray-900/60 backdrop-blur-sm"></div>
-        <div class="modal-container bg-white w-full max-w-sm mx-auto rounded-[2rem] shadow-2xl z-50 p-8 text-center">
+        <div class="modal-container bg-white w-full max-w-sm mx-auto rounded-[2rem] shadow-2xl z-50 p-8 text-center relative">
+            <button onclick="toggleModal('successModal')" class="modal-close-btn"><i class="fa-solid fa-xmark"></i></button>
             <div class="w-16 h-16 bg-green-100 text-green-600 rounded-full flex items-center justify-center mx-auto mb-4 text-2xl">
                 <i class="fa-solid fa-check"></i>
             </div>
@@ -309,7 +339,6 @@
                 <a id="downloadQrBtn" href="#" class="w-full pill-btn bg-blue-600 text-white font-black py-3 flex items-center justify-center gap-2">
                     <i class="fa-solid fa-download"></i> DOWNLOAD QR (PDF)
                 </a>
-                <button onclick="toggleModal('successModal')" class="w-full pill-btn bg-gray-900 text-white font-black py-3">DONE</button>
             </div>
         </div>
     </div>
@@ -344,7 +373,6 @@
         let activeAdminId = null;
         let html5QrCode = null;
 
-        // Office location (admin appointed)
         let officeLocation = null;
         db.ref('settings/officeLocation').on('value', snap => {
             officeLocation = snap.val() || null;
@@ -366,7 +394,6 @@
             options: { cutout: '80%', plugins: { legend: { display: true, position: 'bottom', labels: { usePointStyle: true, font: { weight: 'bold', size: 10 } } } } }
         });
 
-        // Real-time employee list
         db.ref('employees').on('value', snap => {
             const list = document.getElementById('employeeList');
             const data = snap.val();
@@ -396,7 +423,6 @@
             });
         });
 
-        // Real-time today's attendance
         db.ref('attendance/' + todayStr).on('value', snap => {
             const data = snap.val();
             const tbody = document.getElementById('attendanceTable');
@@ -490,7 +516,6 @@
             });
         }
 
-        // Haversine distance (meters)
         function haversineDistance(lat1, lon1, lat2, lon2) {
             const R = 6371000;
             const dLat = (lat2 - lat1) * Math.PI / 180;
@@ -521,7 +546,6 @@
         }
 
         async function processScanLogic(id, name) {
-            // ADMIN LOCATION CHECK - employees can only clock in at the appointed location
             try {
                 const allowed = await isWithinOfficeLocation();
                 if (!allowed) {
@@ -713,8 +737,9 @@
             const name = document.getElementById('newEmpName').value.trim();
             const role = document.getElementById('newEmpRole').value.trim();
             const email = document.getElementById('newEmpEmail').value.trim().toLowerCase();
+            const isAdmin = document.getElementById('newEmpType').value === 'admin';
             db.ref('employees/' + id).set({
-                id, name, role, email,
+                id, name, role, email, isAdmin,
                 createdAt: firebase.database.ServerValue.TIMESTAMP
             }).then(() => {
                 toggleModal('addEmployeeModal');
