--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <button onclick="toggleModal('addEmployeeModal')" class="pill-btn bg-blue-600 text-white px-5 py-2 text-[11px] font-black flex items-center gap-2 shadow-lg shadow-blue-500/20">
                     <i class="fa-solid fa-plus"></i> ADD STAFF
                 </button>
-                <button onclick="signOutAdmin()" class="pill-btn bg-red-600 text-white px-5 py-2 text-[11px] font-black flex items-center gap-2 shadow-lg shadow-red-500/20">
+                <button onclick="showSignOutConfirm()" class="pill-btn bg-red-600 text-white px-5 py-2 text-[11px] font-black flex items-center gap-2 shadow-lg shadow-red-500/20">
                     <i class="fa-solid fa-right-from-bracket"></i> SIGN OUT
                 </button>
             </div>
@@ -177,6 +177,25 @@
                 Sign in with Google
             </button>
             <p class="text-xs text-gray-400 mt-8">Only employees registered as Admin can enter</p>
+        </div>
+    </div>
+
+    <!-- Sign Out Confirmation Modal -->
+    <div id="signOutConfirmModal" class="modal opacity-0 pointer-events-none fixed w-full h-full top-0 left-0 flex items-center justify-center z-[85]">
+        <div class="modal-overlay absolute w-full h-full bg-gray-900/60 backdrop-blur-md"></div>
+        <div class="modal-container bg-white w-full max-w-xs mx-auto rounded-[2.5rem] shadow-2xl z-50 relative overflow-hidden">
+            <button onclick="toggleModal('signOutConfirmModal')" class="modal-close-btn"><i class="fa-solid fa-xmark"></i></button>
+            <div class="p-8 text-center">
+                <div class="w-16 h-16 bg-red-100 text-red-600 rounded-full flex items-center justify-center mx-auto mb-4 text-3xl">
+                    <i class="fa-solid fa-right-from-bracket"></i>
+                </div>
+                <h3 class="text-2xl font-black text-gray-900">Sign Out?</h3>
+                <p class="text-gray-500 text-sm mt-3 leading-relaxed">You will be logged out of the Admin Portal and returned to the login screen.</p>
+                <div class="flex flex-col gap-2 mt-8">
+                    <button onclick="confirmSignOut()" class="pill-btn bg-red-600 text-white font-black py-3.5 text-sm">YES, SIGN OUT</button>
+                    <button onclick="toggleModal('signOutConfirmModal')" class="pill-btn bg-gray-100 text-gray-500 font-black py-3.5 text-sm">CANCEL</button>
+                </div>
+            </div>
         </div>
     </div>
 
@@ -518,6 +537,15 @@
                 console.error(err);
                 alert("Google sign-in failed: " + err.message);
             });
+        }
+
+        function showSignOutConfirm() {
+            toggleModal('signOutConfirmModal');
+        }
+
+        function confirmSignOut() {
+            toggleModal('signOutConfirmModal');
+            signOutAdmin();
         }
 
         function signOutAdmin() {
